tests/compile_fail/invalid_transition_property_name_literal.rs
use surgeist_style::TransitionPropertyName;

fn main() {
    let _name = TransitionPropertyName {
        value: String::from("opacity"),
    };
}
