tests/compile_fail/invalid_transition_property_name_literal.stderr
error[E0451]: field `value` of struct `TransitionPropertyName` is private
 --> tests/compile_fail/invalid_transition_property_name_literal.rs:5:9
  |
4 |     let _name = TransitionPropertyName {
  |                 ---------------------- in this type
5 |         value: String::from("opacity"),
  |         ^^^^^ private field
